[gd_scene load_steps=4 format=3 uid="uid://dmn3de62ckbis"]

[ext_resource type="Script" uid="uid://bc0we575yxyvp" path="res://main_menu/main_menu.gd" id="1_3shxk"]
[ext_resource type="PackedScene" uid="uid://cy2trr1yvumud" path="res://main_menu/menu_button.tscn" id="1_06t4h"]
[ext_resource type="Script" uid="uid://irjmoyg2q3bn" path="res://main_menu/MarginContainer.cs" id="1_7vrkn"]

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3shxk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
script = ExtResource("1_7vrkn")

[node name="MainMenuItems" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 200

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/MainMenuItems"]
layout_mode = 2
theme_override_font_sizes/bold_font_size = 100
bbcode_enabled = true
text = "[b]LOOP[/b]"
fit_content = true
horizontal_alignment = 1

[node name="MenuOptions" type="HBoxContainer" parent="MarginContainer/MainMenuItems"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="EndlessButton" parent="MarginContainer/MainMenuItems/MenuOptions" instance=ExtResource("1_06t4h")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/MainMenuItems/MenuOptions/EndlessButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "ENDLESS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" parent="MarginContainer/MainMenuItems/MenuOptions" instance=ExtResource("1_06t4h")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/MainMenuItems/MenuOptions/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "PLAY"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/MainMenuItems/MenuOptions/EndlessButton" to="." method="_on_endless_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainMenuItems/MenuOptions/PlayButton" to="." method="_on_play_button_pressed"]
